Updated wrapper scripts (+ login.sql scripts) for SQLcl 23.4
A big change in SQLcl 23.4 is the new syntax of the ALIAS command,
which is incompatible with that of prior versions; scripts defining
aliases had to be reworked accordingly, plus login.sql scripts in
order to call the right alias-creating scripts for the version of
SQLcl being used.